location chance image

--- a/example.html
+++ b/example.html
@@ -15,7 +15,7 @@
         <h1>4.Laying on of hands for the gift of the Holy Ghost</h1>
     </header>
     <main>
-        <img src="https://byui-wdd.github.io/wdd130/images/russell_nelson_official_portrait_2018.jpeg">
+        <img src="https://github.com/mlopezcbyu/WDD130/images/russell_nelson_official_portrait_2018.jpeg">
         <p class="main-para">Because of the Savior's Atonement, His gospel provides an invitation to keep changing, growing, and becoming more pure."</p>
     </main>
     <footer>
